[package]
name = "crypto"
version = "0.1.0"
authors = ["Sergey Matyukevich <geomatsi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stream-cipher = "0.3.2"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "bench-rc4"
harness = false
